--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -21,7 +21,8 @@
   <ion-toolbar>
     <!-- Start/Stop -->
     <ion-buttons slot="start">
-      <ion-button>Start</ion-button>
+      <ion-button *ngIf="!isrunnig" (click)="running()">Start</ion-button>
+      <ion-button *ngIf="isrunnig" (click)="stop()">Stop</ion-button>
     </ion-buttons>
     <!-- Restart -->
     <ion-buttons slot="end">
