--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,18 @@
 <ion-content [fullscreen]="true">
 <!-- Compteur ponctuel -->
   <ion-card class="compteur">
-      <ion-card-content>3600 m</ion-card-content>
-      <ion-card-content>{{ minutes }} : {{ seconds }} : {{ milliseconds }}</ion-card-content>
+      <ion-card-content (click)="toogleTimer()">3600 m</ion-card-content>
+      <ion-card-content (click)="resetTimer()">{{ minutes }} : {{ seconds }} : {{ milliseconds }}</ion-card-content>
   </ion-card>
  <!-- Compteurgénérl -->
-  <ion-card class="compteur">
-      <ion-card-content>5000 m</ion-card-content>
+  <ion-card class="compteur" *ngIf="coordinates">
+      <ion-card-content>{{coordinates.coords.latitude}}</ion-card-content>
       <ion-card-content>00:02:15</ion-card-content>
   </ion-card>
 <!-- Boussole -->
+
   <ion-card class="orientation">
-    <img id="compass" alt="Silhouette of mountains" src="../../assets/images/compass-digital.jpg" />
+    <img (click)="test1('test 2')" id="compass" alt="Silhouette of mountains" src="../../assets/images/compass-digital.jpg" />
   <ion-card-header class="info-compass">
     <ion-card-subtitle class="alt">247 m</ion-card-subtitle>
     <ion-card-title class="degree"> 45° NE</ion-card-title>
