--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,6 +1,6 @@
 .compteur {
     display: flex;
-    color: blue;
+    color: rgb(30, 33, 48);
     justify-content: center;
     font-weight: bold;
 
