--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -5,19 +5,20 @@
       <ion-card-content (click)="resetTimer()">{{ minutes }} : {{ seconds }} : {{ milliseconds }}</ion-card-content>
   </ion-card>
  <!-- Compteurgénérl -->
-  <!-- <ion-card class="compteur" *ngIf="coordinatesStart">
-      <ion-card-content>{{coordinatesStart.coords.latitude}}</ion-card-content>
+  <ion-card class="compteur" >
+      <ion-card-content *ngIf="coordinatesStart.coords.altitude">{{coordinatesStart.coords.altitude}}</ion-card-content>
+      <ion-card-content *ngIf="!coordinatesStart.coords.altitude">0</ion-card-content>
       <ion-card-content>00:02:15</ion-card-content>
-  </ion-card> -->
+  </ion-card> 
 <!-- Boussole -->
 
-  <!-- <ion-card class="orientation">
+  <ion-card class="orientation">
     <img id="compass" alt="Silhouette of mountains" src="../../assets/images/compass-digital.jpg" />
   <ion-card-header class="info-compass">
     <ion-card-subtitle class="alt">247 m</ion-card-subtitle>
     <ion-card-title class="degree"> 45° NE</ion-card-title>
   </ion-card-header>
-  </ion-card> -->
+  </ion-card> 
 
   
   <ion-card>
